# MyCode

./: AndroidStudioProjects  MyFM.sh  config  git.sh  readme.md
ForegroundService/: settings.gradle
LiveData/app/: build.gradle
MyAudioRecorder/: settings.gradle
MyAudioRecorder/app/: build.gradle
MyBleClient/: build.gradle  settings.gradle
MyBleClient/app/: build.gradle
MyBleServer/: settings.gradle
MyBleServer/app/: build.gradle
MyBluetooth/app/: build.gradle
MyDeskNote/: build.gradle  settings.gradle
MyDeskNote/app/: build.gradle
MyFM/: myfm
MyFM/app/: build.gradle
MyFM/fm_service/: CMakeCache.txt  Makefile  clean.sh  cmake_install.cmake  fm_service  fm_service (copy 1).c  fm_service (copy 10).c  fm_service (copy 11 未修复频率问题).c  fm_service (copy 2).c  fm_service (copy 3).c  fm_service (copy 5).c  fm_service (copy 8).c  fm_service (copy 9).c  fm_service copy.c  fm_service--].c  fm_service-10.c  fm_service-seek没改过.c  fm_service.c  fm_service1  fm_service1.c  fm_service10.c  fm_service2  fmc.txt  make.sh
MyFM/fm_service/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fm_service  fm_service.c  test  test.c
MyGPS/: settings.gradle
MyGPS/app/: build.gradle
MyMQTT/: settings.gradle
MySearch/: settings.gradle
MyWiFiDirect/: settings.gradle
TermuxCommand/: settings.gradle
autobrightness/: local (copy 1).properties  settings (copy 1).gradle
blescan/: settings.gradle
clockwidget/: settings.gradle
fm/: CMakeCache.txt  Makefile  cmake_install.cmake  fm_service.c
fm/备份/: test
gattclient/: settings.gradle
handler/: settings.gradle
handler2/: settings.gradle
(+398 files in other folders)
